k8s/07-evaluation-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: toggle-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      containers:
        - name: evaluation-service
          image: evaluation-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8004
          resources:
            requests:
              cpu: 200m
              memory: 64Mi
            limits:
              cpu: 1000m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: toggle-master
spec:
  selector:
    app: evaluation-service
  ports:
    - port: 8004
      targetPort: 8004
